--- a/app/src/main/res/layout/activity_dodaj.xml
+++ b/app/src/main/res/layout/activity_dodaj.xml
@@ -5,19 +5,59 @@
     android:orientation="vertical"
     android:padding="20dp">
 
-    <EditText android:id="@+id/inputTytul" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="Opis wydatku" />
-    <EditText android:id="@+id/inputKwota" android:layout_width="match_parent" android:layout_height="wrap_content" android:inputType="numberDecimal" android:hint="Kwota" />
+    <!-- Pole tekstowe na Tytuł -->
+    <EditText
+        android:id="@+id/inputTytul"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:hint="Opis wydatku" />
 
-    <TextView android:text="Kategoria:" android:layout_marginTop="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+    <!-- Pole tekstowe na Kwotę -->
+    <EditText
+        android:id="@+id/inputKwota"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:hint="Kwota" />
 
+    <TextView
+        android:text="Kategoria:"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <!-- Opcja wyboru -->
     <RadioGroup
         android:id="@+id/rgKategorie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <RadioButton android:id="@+id/rbDom" android:text="Dom" android:checked="true" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-        <RadioButton android:id="@+id/rbPaliwo" android:text="Paliwo" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
-        <RadioButton android:id="@+id/rbRozrywka" android:text="Rozrywka" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
+        <RadioButton
+            android:id="@+id/rbDom"
+            android:text="Dom"
+            android:checked="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <RadioButton
+            android:id="@+id/rbPaliwo"
+            android:text="Paliwo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <RadioButton
+            android:id="@+id/rbRozrywka"
+            android:text="Rozrywka"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <!--<RadioButton
+            android:id="@+id/rbTest"
+            android:text="Test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>-->
     </RadioGroup>
 
-    <Button android:id="@+id/btnZapiszWydatek" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="Zapisz" android:layout_marginTop="20dp"/>
+    <!-- Przycisk Zapisz -->
+    <Button
+        android:id="@+id/btnZapiszWydatek"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Zapisz"
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
