--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:padding="16dp"
     android:background="#FFFFFF">
 
+    <!-- Wkres -->
     <com.example.menederwydatkw.WykresView
         android:id="@+id/wykresView"
         android:layout_width="match_parent"
@@ -13,6 +14,7 @@
         android:background="#E0E0E0"
         android:layout_marginBottom="10dp" />
 
+    <!-- Tekst sumy -->
     <TextView
         android:id="@+id/tvSumaMiesiac"
         android:layout_width="match_parent"
@@ -24,12 +26,14 @@
         android:textColor="#000000"
         android:layout_marginBottom="10dp"/>
 
+    <!-- Kontener poziomy na dwa przyciski obok siebie -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="5dp">
 
+        <!-- Przycisk "Dodaj" -->
         <Button
             android:id="@+id/btnDodaj"
             android:layout_width="0dp"
@@ -38,6 +42,7 @@
             android:text="Dodaj"
             android:layout_marginEnd="5dp"/>
 
+        <!-- Przycisk "Ustawienia" -->
         <Button
             android:id="@+id/btnUstawienia"
             android:layout_width="0dp"
@@ -46,12 +51,14 @@
             android:text="Ustawienia" />
     </LinearLayout>
 
+    <!-- Przycisk "Raport" -->
     <Button
         android:id="@+id/btnRaport"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Udostępnij Raport" />
 
+    <!-- Nagłówek sekcji listy -->
     <TextView
         android:text="Historia wydatków:"
         android:textSize="18sp"
@@ -61,20 +68,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fillViewport="true"
-        android:background="#F5F5F5">
+    <!-- ScrollView -->
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1"
+       android:fillViewport="true"
+       android:background="#F5F5F5">
 
-    <LinearLayout
-        android:id="@+id/layoutLista"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp"/>
+       <!-- Kontener na listę wydatków -->
+   <LinearLayout
+       android:id="@+id/layoutLista"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       android:padding="5dp"/>
 
-    </ScrollView>
+   </ScrollView>
 
 </LinearLayout>
