--- a/app/src/main/res/layout/activity_ustawienia.xml
+++ b/app/src/main/res/layout/activity_ustawienia.xml
@@ -5,23 +5,27 @@
     android:orientation="vertical"
     android:padding="20dp">
 
+    <!-- Etykieta Limitu -->
     <TextView
         android:text="Limit miesięczny:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <!-- Pole edycji Limitu -->
     <EditText
         android:id="@+id/editLimit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal" />
 
+    <!-- Etykieta Waluty -->
     <TextView
         android:text="Wybierz walutę:"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <!-- Lista rozwijana do wyboru waluty -->
     <Spinner
         android:id="@+id/spinnerWaluta"
         android:layout_width="match_parent"
@@ -29,12 +33,14 @@
         android:background="@android:drawable/btn_dropdown"
         android:layout_marginTop="5dp" />
 
+    <!-- Etykieta Sortowania -->
     <TextView
         android:text="Sortowanie listy:"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <!-- Grupa opcji sortowania -->
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -51,6 +57,7 @@
             android:layout_height="wrap_content"/>
     </RadioGroup>
 
+    <!-- Przycisk Zapisz -->
     <Button
         android:id="@+id/btnZapiszUstawienia"
         android:layout_width="match_parent"
